# Veswo---Bot

./: .gitignore  LICENSE  PACKAGING.md  README.md  app.py  build.sh  clean_tauri_build.sh  dev.sh  launch.sh  launcher.sh  requirements.txt  run.sh  run_tests.sh  run_veswo_bot.sh  start.sh  test_system.py
backend/: main.py
backend/utils/: ai_model.py  essay_writer.py  math_solver.py  ocr_handler.py  problem_solver.py  screen_recognizer.py  task_router.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src-tauri/: Cargo.toml  build.rs  launcher.sh  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
tests/: test_assistant.py
